# dgenies

./: .actrc  .gitattributes  .gitignore  CHANGELOG.md  INSTALL.md  MANIFEST.in  README.md  allowed_extensions.yaml  application.properties  application.properties.example  bin  dependencies.md  dgenies.wsgi  flask_config.py  get_cluster_scripts.py  lib  load_file.php  logs  minify-css.sh  minify-js.sh  package.json  pyproject.toml  readthedocs.yml  requirements-nodes.txt  requirements-sphinx.txt  requirements.txt  setup.cfg  setup.py  setup.py.bk  test.php  tools.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-test.yml
css/: chosen.min.css  jquery-ui.min.css  style.css
docs/: Makefile  build_js_doc_rst.py  conf.py  dgenies.bin.rst  dgenies.content.rst  dgenies.rst  dgenies.submodules.rst  index.rst  modules.rst
docs/_build/doctrees/: dgenies.doctree  dgenies.lib.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  dgenies.html  dgenies.lib.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: dgenies.html  index.html  peewee.html
docs/_build/html/_sources/: dgenies.lib.rst.txt  index.rst.txt
js/: d3.boxplot.controls.js  d3.boxplot.events.js  d3.boxplot.js  d3.boxplot.mousetip.js  d3.boxplot.zoom.js  dgenies.js  dgenies.result.controls.js  dgenies.result.export.js  dgenies.result.js  dgenies.run.js  dgenies.status.js  draw_graph.js  jquery-ui.min.js
lib/: Fasta.py  crons.py  drmaa.py  functions.py  job_manager.py  mailer.py  paf.py  parse_paf.py  prepare_paf.py  upload_file.py
lib/mail_templates/: dl_fasta.html  job_notification.html
src/: MANIFEST.in
src/dgenies/: .gitignore  INSTALL.md  __init__.py  allowed_extensions-dev.yaml  allowed_extensions.py  allowed_extensions.yaml  application-dev.properties  config_reader.py  database.py  dgenies.wsgi  tools-dev.yaml  tools-dev2.yaml  tools.py  user_manual.md  views.py
src/dgenies/api/: __init__.py  datamodels.py  job_descriptions.py
src/dgenies/lib/: batch.py  crons.py  datafile.py  decorators.py  drmaasession.py  exceptions.py  fasta.py  functions.py  job_manager.py  latest.py  mailer.py  paf.py  parsers.py  track.py  upload_file.py  validators.py
src/dgenies/logs/: README
src/dgenies/md/: INSTALL.md  cookies.md  doc_definitions.md  doc_dotplot.md  doc_formats.md  doc_run.md  doc_run_standalone.md  lorem_ipsum.md  user_manual.md
src/dgenies/static/css/: dgenies.css  (+4 more)
src/dgenies/templates/: base.html  contact.html  documentation.html  gallery.html  index.html  map_offline.html  result.html  run.html  simple.html  status.html
srv/: config_reader.py  database.py  dgenies.wsgi  hello.py  logs  main.py
srv/templates/: base.html  header.html  index.html  results.html  run.html  status.html
tests/: .gitignore  submit_parallel_jobs.py
win32/: build_setup.iss  dgeniesrun.py
win32/data/: application.properties  tools.yaml
(+59 files in other folders)
