[metadata]
url = http://dgenies.toulouse.inra.fr
project_urls =
    Sources = https://github.com/genotoul-bioinfo/dgenies
    Bug Tracker = https://github.com/genotoul-bioinfo/dgenies/issues
    Changelog = https://github.com/genotoul-bioinfo/dgenies/blob/main/CHANGELOG.md
author = Floreal Cabanettes
author_email = floreal.cabanettes@inra.fr
maintainer = Philippe Bordron
maintainer_email = philippe.bordron@inrae.fr
description = Dotplot large Genomes in an Interactive, Efficient and Simple way
long_description = file: README.md
long_description_content_type = text/markdown
keywords = bioinformatics,genome,comparison,dotplot,inrae,genotoul
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: JavaScript
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Bio-Informatics
python_requires = '>=3.5'
